--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -318,7 +318,7 @@ body.light-mode footer h3 {
 }
 
 /* Center the button in the navbar */
-.loginSignupbtn {
+.navbarButton {
     background-color: rgba(162, 162, 162, 0.203);
     height: 40px;
     width: min-content;
@@ -341,8 +341,18 @@ body.light-mode footer h3 {
 
 }
 
+#bug-report-button {
+    height: 40px;
+    width: min-content;
+    border-radius: 7px !important;
+    position: absolute;
+    top: 10px;
+    right: 200px;
+    font-size: 0.8rem;
+}
+
 /* Ensure the button's anchor tag is styled correctly */
-.loginSignupbtn a {
+.navbarButton a {
     color: white;
     text-decoration: none;
 }
@@ -353,7 +363,7 @@ body.light-mode footer h3 {
     /* Center all items in the navbar */
 }
 
-.loginSignupbtn a {
+.navbarButton a {
     color: white;
     text-decoration: none;
 }
@@ -1132,15 +1142,23 @@ input {
 #bug-report-form {
     width: 75vw;; /* For phone compatability */
     max-width: 600px; /* For desktop compatability */
-    z-index: 9999;
+    z-index: -999;
     position: fixed;
-    top: 50%;
+    top: 30%;
     left: 50%;
-    transform: translate(-46%, -55%);
+    transform: translate(-42%, -50%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 2.4vh;
+    opacity: 0%;
+    transition: all 0.35s ease-out;
+}
+
+#bug-report-form.active {
+    z-index: 9999;
+    top: 47.5%;
+    opacity: 100%;
 }
 
 #bug-report-form p {
@@ -1191,7 +1209,7 @@ input {
     justify-content: center;
 }
 
-#bug-report-form button {
+#bug-report-form button[type="submit"] {
     background-color: rgba(0, 123, 121, 0.364);
     color: rgb(224, 224, 224);
     border: none;
@@ -1201,10 +1219,26 @@ input {
     transition: all 0.2s ease-out;
 }
 
-#bug-report-form button:hover {
+#bug-report-form button[type="submit"]:hover {
     color: black;
     background-color:rgba(0, 240, 236, 0.867);
     box-shadow: 0px 0px 15px rgba(0, 240, 236, 0.867);
+}
+
+#close-report-popup {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0);
+    color: rgb(148, 51, 51);
+    border: none;
+    transform: scale(1.3);
+    right: 1%;
+    top: 1%;
+    will-change: transform;
+    transition: transform 0.2s ease;
+}
+
+#close-report-popup:hover {
+    transform: scale(1.4);
 }
 
 body.popup-active {
@@ -1214,7 +1248,7 @@ body.popup-active {
 #container.popup-active{
     user-select: none;
     pointer-events: none;
-    filter: blur(10px);
+    filter: blur(8px);
     overflow: hidden;
   }
 
@@ -1223,7 +1257,7 @@ body.popup-active {
     .name {
         margin-left: 10px;
     }
-    .loginSignupbtn{
+    .navbarButton{
         padding: 10px;
         border-radius: 50%;
     }
