--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -1152,7 +1152,7 @@ input {
     justify-content: center;
     gap: 2.4vh;
     opacity: 0%;
-    transition: all 0.35s ease-out;
+    transition: all 0.35s ease;
 }
 
 #bug-report-form.active {
