--- a/website/styles/404.css
+++ b/website/styles/404.css
@@ -3,6 +3,12 @@
     padding: 0;
 }
 body{
+    background-size: 90.3px 90.3px;
+    background-image:
+        linear-gradient(to right, rgba(54, 54, 54, 0.705) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(54, 54, 54, 0.705) 1px, transparent 1px);
+        background-attachment: fixed;
+        background-position-y: -12px;
     background-color: rgb(0, 0, 0);
     color:white;
 }
