--- a/website/styles/reviews.css
+++ b/website/styles/reviews.css
@@ -68,6 +68,10 @@ body {
 }
 
 .review {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
     background-color: #67676747;
     border: 1px solid rgba(202, 202, 202, 0.178);
     padding: 15px;
@@ -96,15 +100,29 @@ body {
 }
 
 .review-content {
+    position: relative;
     color: #ffffff;
     font-size: 1em;
-    margin-top: 10px;
     text-align: left;
     line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
+.review-date {
+    float: left;
+    font-size: 12px;
+    color: #888;
+    font-style: italic;
+  }
+
 .review-footer {
-    margin-top: 5px;
+    position: relative; /* Keep it within the parent review div */
+  height: 30px; /* Adjust as needed */
+  display: flex;
+  align-items: flex-end; /* Push the date to the bottom */
+  justify-content: space-between; /* Align the date to the left */
     text-align: right;
 }
 
@@ -121,6 +139,7 @@ body {
 }
 
 .goBack {
+    cursor: pointer;
     position: fixed;
     bottom: 20px;
     left: 20px;
