--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -502,6 +502,7 @@ tr:hover {
     max-width: 400px;
     box-shadow: 0px 0px 10px black;
     font-size: 1.2rem;
+    padding-bottom: 100px;
 }
 
 .preview {
@@ -675,15 +676,17 @@ tr:hover {
 
 #about {
     z-index: -10;
-    padding-top: 300px;
+    padding-top: 150px;
+    margin-top: 250px;
     display: flex;
     padding-bottom: 0;
-    border-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), #FDE725, #7AD151, #22A884, #2A788E, #414487, #440154) 1;
+    border-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), #FDE725, #7AD151, #22A884, #2A788E, #414487, #440154,rgba(0, 0, 0, 0)) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
     border-bottom-style: none;
     border-right-style: none;
+    padding-bottom: 150px;
 }
 
 #charts {
@@ -734,12 +737,13 @@ tr:hover {
     display: flex;
     padding-top: 0;
     padding-bottom: 0;
-    border-image: linear-gradient(#440154, #260590, #5F01A5, #A31E99, #EC7535, #F2F224, rgba(0, 0, 0, 0)) 1;
+    border-image: linear-gradient(rgba(0, 0, 0, 0),#440154, #A31E99, #EC7535, #F2F224, rgba(0, 0, 0, 0)) 1;
     border-width: 2px;
     border-style: solid;
     border-top-style: none;
     border-bottom-style: none;
     border-right-style: none;
+    margin-top: -180px;
 }
 
 #develop {
@@ -755,16 +759,14 @@ tr:hover {
 }
 
 
-.section.big_container {
+.section {
     z-index: -1;
     transform: translateX(0);
-    opacity: 1;
 }
 
 .section {
     position: relative;
     transform: translateY(-100px);
-    opacity: 0;
     transition: .5s all ease;
 }
 
@@ -1219,7 +1221,7 @@ input {
 
     #about {
         padding-top: 150px;
-        margin-top: 0;
+        margin-top: 150px;
         flex-direction: column;
     }
 
@@ -1232,7 +1234,6 @@ input {
     }*/
 
     #finance {
-        margin-top: 0;
         flex-direction: column-reverse;
     }
 
